package ddd.workshop.parkingboy;

import java.util.List;

public class ParkingManager {

    private List<ParkingBoy> parkingBoys;

    public ParkingManager(List<ParkingBoy> parkingBoys) {
        this.parkingBoys = parkingBoys;
    }
}
